# FactorChain

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml  test-backend.yml  test-contracts.yml  test-frontend.yml
backend/: .dockerignore  .eslintrc.js  Dockerfile  docker-compose.yml  nest-cli.json  package-lock.json  package.json  tsconfig.json
backend/libs/soroban/: tsconfig.lib.json
backend/prisma/: schema.prisma
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/invoice-registry/: Cargo.toml
contracts/liquidity-pool/: Cargo.toml
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: integration_test.rs  lib.rs  test.rs
contracts/marketplace/test_snapshots/integration_test/: test_default_workflow_with_grace_period.1.json  test_events_through_full_flow.1.json  test_full_lifecycle_mint_list_bid_escrow_settle.1.json  test_pool_auto_fund_with_risk_gating.1.json
contracts/marketplace/test_snapshots/test/: test_bid_below_reserve_rejected.1.json  test_cancel_listing.1.json  test_double_accept_rejected.1.json  test_duplicate_listing_rejected.1.json  test_get_listing_returns_correct_data.1.json  test_listing_expiry_rejects_bid.1.json  test_multiple_bids_on_listing.1.json
contracts/oracle/: Cargo.toml
contracts/shared/: Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
scripts/: deploy.sh  initialize.sh  seed-testnet.sh
(+119 files in other folders)
