[package]
name = "marketplace"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
invoice-registry = { path = "../invoice-registry" }
escrow = { path = "../escrow" }
liquidity-pool = { path = "../liquidity-pool" }
oracle = { path = "../oracle" }
